maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:7: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  for(x <- 0 to Largeur-1;y <- 0 to Hauteur-1) {
        ^